# kafka-with-python

./: README.md  docker-compose.yaml  pyproject.toml
src/: consumer.py  producer.py
src/config/: settings.py
src/consumer_opensearch/: opensearch_consumer.py
src/handler/: wikimedia_change_handler.py
src/opensearch/: opensearch_client.py
src/producer/: kafka_producer.py
src/utils/: deserialization.py  logger.py  random_key.py  serialization.py
